[gd_scene load_steps=81 format=3 uid="uid://cmskjpbop6aeh"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_fyago"]
[ext_resource type="Shader" path="res://art/Blink.gdshader" id="1_sg5ry"]
[ext_resource type="Texture2D" uid="uid://cqhlb8n7mhvmw" path="res://art/Player/Walk.png" id="2_0gytx"]
[ext_resource type="Texture2D" uid="uid://d3bjn3mic1ocg" path="res://art/Player/Attack.png" id="2_4xytk"]
[ext_resource type="Texture2D" uid="uid://bx3dxuqfbr45" path="res://art/Player/Idle.png" id="2_vx1pl"]
[ext_resource type="Texture2D" uid="uid://m7ib0bg8260y" path="res://art/Player/LargeShadow.png" id="3_vailm"]
[ext_resource type="AudioStream" uid="uid://dds18c5hws4cn" path="res://art/Sounds/laser.wav" id="5_ww1sy"]
[ext_resource type="Script" path="res://scripts/gun.gd" id="6_ukvgl"]
[ext_resource type="PackedScene" uid="uid://donloy3ig1ro8" path="res://scenes/Projectile.tscn" id="7_20w4h"]
[ext_resource type="PackedScene" uid="uid://8mk0il1s3w4j" path="res://scenes/hurt_box.tscn" id="8_v6g2w"]
[ext_resource type="Texture2D" uid="uid://ckor77v7loqh" path="res://art/Player/Death.png" id="8_woddu"]
[ext_resource type="Texture2D" uid="uid://bvuexdg11578c" path="res://art/UI/hpB.png" id="10_5emq4"]
[ext_resource type="Texture2D" uid="uid://p0wkjamvrbwt" path="res://art/UI/complete.png" id="11_koy3o"]
[ext_resource type="Texture2D" uid="uid://4b07vtfk40xd" path="res://art/UI/cs.png" id="12_ggfgd"]
[ext_resource type="Texture2D" uid="uid://cxy3btrb5j7yh" path="res://art/UI/taglio.png" id="12_m1bhf"]
[ext_resource type="Texture2D" uid="uid://casu554ac6aq4" path="res://art/UI/xpBar.png" id="12_od0f0"]
[ext_resource type="Script" path="res://scripts/CS.gd" id="13_1d2ha"]
[ext_resource type="Texture2D" uid="uid://cqgp37j2icu7o" path="res://art/UI/lvlDisplay.png" id="14_oke4s"]
[ext_resource type="FontFile" uid="uid://brxyk3yvewsvc" path="res://art/font1.ttf" id="15_p1fp8"]
[ext_resource type="Texture2D" uid="uid://cge7msvgpnb0e" path="res://art/UI/select.png" id="16_pt8bw"]
[ext_resource type="AudioStream" uid="uid://dq03davl0lg6k" path="res://art/Sounds/lvlUp.wav" id="16_wss71"]
[ext_resource type="Script" path="res://scripts/LvlUpPanel.gd" id="17_7wdh4"]
[ext_resource type="Texture2D" uid="uid://cdsox6bbr0ocq" path="res://art/UI/time.png" id="19_hsxy6"]
[ext_resource type="Script" path="res://scripts/gameTimer.gd" id="20_mb7b5"]
[ext_resource type="Texture2D" uid="uid://dyfuhuckfgq6l" path="res://art/UI/spell1.png" id="21_5us4w"]
[ext_resource type="Texture2D" uid="uid://nqv0xelhyl6q" path="res://art/UI/spell.png" id="21_b8d2j"]
[ext_resource type="Texture2D" uid="uid://h6gkigks2w4o" path="res://art/UI/lightning.png" id="21_e5e6j"]
[ext_resource type="Shader" path="res://art/Blur.gdshader" id="22_j2tps"]
[ext_resource type="Texture2D" uid="uid://d4mmfj4rq4wa0" path="res://art/UI/magnet.png" id="23_7rre4"]
[ext_resource type="Script" path="res://scripts/Magnet.gd" id="23_peg5o"]
[ext_resource type="Script" path="res://scripts/Death.gd" id="24_pimhb"]
[ext_resource type="Texture2D" uid="uid://cyv6vdxk1g0vt" path="res://art/UI/skillGap.png" id="25_x16dd"]
[ext_resource type="AudioStream" uid="uid://ddf1ft02lscru" path="res://art/Sounds/buttonPressed.wav" id="26_c1ka6"]
[ext_resource type="AudioStream" uid="uid://blwgash7dkwka" path="res://art/Sounds/buttonScrolling.wav" id="27_at76x"]
[ext_resource type="AudioStream" uid="uid://dll1rtudcwxi3" path="res://art/Sounds/damage.mp3" id="28_ijlcm"]
[ext_resource type="PackedScene" uid="uid://ccmgk888h7lfd" path="res://scenes/pause.tscn" id="28_qsid5"]
[ext_resource type="Script" path="res://scripts/Explosion.gd" id="31_op854"]
[ext_resource type="Texture2D" uid="uid://wh361cnoxhak" path="res://art/Projectile/01.png" id="31_vft15"]
[ext_resource type="PackedScene" uid="uid://dpg8igdyy7wcb" path="res://scenes/hitBox.tscn" id="32_gt2e2"]
[ext_resource type="PackedScene" uid="uid://500jch7ksiw1" path="res://scenes/rotativeAttack.tscn" id="40_s655x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p2g7e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xqu03"]
shader = ExtResource("1_sg5ry")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_h0k7g"]
atlas = ExtResource("2_4xytk")
region = Rect2(0, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju5to"]
atlas = ExtResource("2_4xytk")
region = Rect2(112, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcwtb"]
atlas = ExtResource("2_4xytk")
region = Rect2(224, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qolg3"]
atlas = ExtResource("2_4xytk")
region = Rect2(336, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph55l"]
atlas = ExtResource("2_4xytk")
region = Rect2(448, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrx6q"]
atlas = ExtResource("2_4xytk")
region = Rect2(560, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms08m"]
atlas = ExtResource("2_4xytk")
region = Rect2(672, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahknc"]
atlas = ExtResource("2_4xytk")
region = Rect2(784, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2i57"]
atlas = ExtResource("2_4xytk")
region = Rect2(896, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3fmi"]
atlas = ExtResource("2_4xytk")
region = Rect2(1008, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfrf8"]
atlas = ExtResource("2_4xytk")
region = Rect2(1120, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry50h"]
atlas = ExtResource("2_0gytx")
region = Rect2(0, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0283f"]
atlas = ExtResource("2_0gytx")
region = Rect2(112, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jpwb"]
atlas = ExtResource("2_0gytx")
region = Rect2(224, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c3nf"]
atlas = ExtResource("2_0gytx")
region = Rect2(336, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8myjr"]
atlas = ExtResource("8_woddu")
region = Rect2(0, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vajf5"]
atlas = ExtResource("8_woddu")
region = Rect2(112, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvid0"]
atlas = ExtResource("2_vx1pl")
region = Rect2(0, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7cnm"]
atlas = ExtResource("2_vx1pl")
region = Rect2(112, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1n1p"]
atlas = ExtResource("2_vx1pl")
region = Rect2(224, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxy1j"]
atlas = ExtResource("2_vx1pl")
region = Rect2(336, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xiuw"]
atlas = ExtResource("2_vx1pl")
region = Rect2(448, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5bjl"]
atlas = ExtResource("2_vx1pl")
region = Rect2(560, 0, 112, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_colr0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0k7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju5to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcwtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qolg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph55l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrx6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms08m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahknc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2i57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3fmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfrf8")
}],
"loop": true,
"name": &"Attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry50h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0283f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jpwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c3nf")
}],
"loop": true,
"name": &"Walk",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8myjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vajf5")
}],
"loop": false,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvid0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7cnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1n1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxy1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xiuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5bjl")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2dhtr"]
radius = 11.0454

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fuwcp"]
size = Vector2(26, 26)

[sub_resource type="Animation" id="Animation_n24bl"]
resource_name = "Blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_km4m4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xleh5"]
_data = {
"Blink": SubResource("Animation_n24bl"),
"RESET": SubResource("Animation_km4m4")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jjmp3"]
shader = ExtResource("22_j2tps")
shader_parameter/lod = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_haqgp"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_786sv"]
radius = 19.0

[sub_resource type="Animation" id="Animation_l885y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Blur:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ljbul"]
resource_name = "blur"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Blur:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wmdsu"]
_data = {
"RESET": SubResource("Animation_l885y"),
"blur": SubResource("Animation_ljbul")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_k6msx"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xloa2"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 100.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3n5r6"]
radius = 105.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("healtBar")]
material = SubResource("ShaderMaterial_p2g7e")
collision_layer = 17
motion_mode = 1
script = ExtResource("1_fyago")
healtBar = NodePath("CanvasLayer/Bar/TextureProgressBar")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_wss71")

[node name="Gun" type="Node2D" parent="." groups=["Player"]]
position = Vector2(-4, 3)
script = ExtResource("6_ukvgl")
bullet = ExtResource("7_20w4h")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Gun"]
stream = ExtResource("5_ww1sy")
volume_db = -5.0
pitch_scale = 1.4

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_xqu03")
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_colr0")
animation = &"death"
autoplay = "idle"
frame = 1
frame_progress = 1.0

[node name="Sprite2D" type="Sprite2D" parent="Sprite"]
show_behind_parent = true
position = Vector2(2, 20)
scale = Vector2(1.15625, 1)
texture = ExtResource("3_vailm")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.7, 1.7)
position_smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 10)
shape = SubResource("CircleShape2D_2dhtr")

[node name="HurtBox" parent="." instance=ExtResource("8_v6g2w")]
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(3, 10)
shape = SubResource("RectangleShape2D_fuwcp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xleh5")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Bar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 43.0
offset_bottom = 42.0
scale = Vector2(2, 2)

[node name="CS" type="TextureRect" parent="CanvasLayer/Bar"]
layout_mode = 0
offset_left = 274.5
offset_top = 20.0
offset_right = 511.5
offset_bottom = 132.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_ggfgd")
script = ExtResource("13_1d2ha")

[node name="CSLabel" type="Label" parent="CanvasLayer/Bar/CS"]
layout_mode = 0
offset_left = 43.3333
offset_top = 23.3333
offset_right = 191.333
offset_bottom = 82.3333
theme_override_fonts/font = ExtResource("15_p1fp8")
theme_override_font_sizes/font_size = 64
text = "10000"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Bar"]
layout_mode = 0
offset_right = 1627.0
offset_bottom = 553.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_5emq4")

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/Bar"]
layout_mode = 0
offset_left = 45.0
offset_top = 34.0
offset_right = 1672.0
offset_bottom = 587.0
scale = Vector2(0.1, 0.1)
step = 0.1
value = 100.0
texture_progress = ExtResource("11_koy3o")

[node name="xpBar" type="TextureProgressBar" parent="CanvasLayer/Bar"]
layout_mode = 0
offset_left = 45.0
offset_top = 44.0
offset_right = 347.0
offset_bottom = 84.0
scale = Vector2(0.1, 0.1)
step = 0.1
value = 100.0
texture_progress = ExtResource("12_od0f0")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Bar"]
position = Vector2(11, 31)
texture = ExtResource("12_m1bhf")
flip_h = true
region_enabled = true
region_rect = Rect2(29.7749, 24.9908, 62.7654, 45.7138)

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Bar"]
layout_mode = 0
offset_left = 19.0
offset_top = 53.5
offset_right = 269.0
offset_bottom = 303.5
scale = Vector2(0.1, 0.1)
texture = ExtResource("14_oke4s")

[node name="Lvl" type="Label" parent="CanvasLayer/Bar"]
layout_mode = 0
offset_left = 12.0
offset_top = 57.5
offset_right = 52.0
offset_bottom = 80.5
theme_override_fonts/font = ExtResource("15_p1fp8")
text = "100"
horizontal_alignment = 1

[node name="Collected1" type="GridContainer" parent="CanvasLayer/Bar"]
layout_mode = 0
offset_left = 50.5
offset_top = 54.5
offset_right = 150.5
offset_bottom = 70.5
columns = 5

[node name="Collected2" type="GridContainer" parent="CanvasLayer/Bar"]
layout_mode = 0
offset_left = 50.5
offset_top = 70.5
offset_right = 150.5
offset_bottom = 86.5
columns = 5

[node name="Collected3" type="GridContainer" parent="CanvasLayer/Bar"]
layout_mode = 0
offset_left = 50.5
offset_top = 85.0
offset_right = 150.5
offset_bottom = 101.0
columns = 5

[node name="Spell" type="TextureRect" parent="CanvasLayer"]
offset_left = 1035.0
offset_top = 20.0
offset_right = 1285.0
offset_bottom = 271.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("21_b8d2j")

[node name="Lightning" type="Sprite2D" parent="CanvasLayer/Spell"]
show_behind_parent = true
position = Vector2(107.5, 135)
scale = Vector2(0.479659, 0.479659)
texture = ExtResource("21_5us4w")

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/Spell"]
modulate = Color(0, 0, 0, 0.784314)
layout_mode = 0
offset_left = 18.0
offset_top = 43.0
offset_right = 210.0
offset_bottom = 240.0
scale = Vector2(1.01, 1.01)
step = 0.1
value = 100.0
fill_mode = 5
texture_progress = ExtResource("21_e5e6j")

[node name="TimeNumber" type="Label" parent="CanvasLayer/Spell"]
layout_mode = 0
offset_left = 60.0
offset_top = 102.5
offset_right = 156.0
offset_bottom = 161.5
theme_override_fonts/font = ExtResource("15_p1fp8")
theme_override_font_sizes/font_size = 64
text = "1"
horizontal_alignment = 1

[node name="Key" type="Label" parent="CanvasLayer/Spell"]
layout_mode = 0
offset_left = -65.0
offset_top = 142.5
offset_right = 31.0
offset_bottom = 201.5
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("15_p1fp8")
theme_override_font_sizes/font_size = 64
text = "Q
"
horizontal_alignment = 1

[node name="Magnet" type="TextureRect" parent="CanvasLayer"]
offset_left = 1131.0
offset_top = 120.0
offset_right = 1381.0
offset_bottom = 371.0
rotation = 1.5708
scale = Vector2(0.4, 0.4)
texture = ExtResource("21_b8d2j")
script = ExtResource("23_peg5o")

[node name="Magnet" type="Sprite2D" parent="CanvasLayer/Magnet"]
show_behind_parent = true
position = Vector2(107.771, 132.763)
rotation = -1.57065
scale = Vector2(0.506576, 0.506576)
texture = ExtResource("23_7rre4")

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/Magnet"]
modulate = Color(0, 0, 0, 0.784314)
layout_mode = 0
offset_left = 17.5
offset_top = 222.5
offset_right = 377.5
offset_bottom = 581.5
rotation = -1.5708
scale = Vector2(0.5, 0.5)
step = 0.1
value = 100.0
fill_mode = 5
texture_progress = ExtResource("23_7rre4")

[node name="TimeNumber" type="Label" parent="CanvasLayer/Magnet"]
layout_mode = 0
offset_left = 82.5
offset_top = 170.0
offset_right = 178.5
offset_bottom = 229.0
rotation = -1.5708
theme_override_fonts/font = ExtResource("15_p1fp8")
theme_override_font_sizes/font_size = 64
text = "1"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="CanvasLayer/Magnet"]
wait_time = 90.0
one_shot = true

[node name="Key" type="Label" parent="CanvasLayer/Magnet"]
layout_mode = 0
offset_left = 130.0
offset_top = 305.0
offset_right = 226.0
offset_bottom = 364.0
rotation = -1.56873
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("15_p1fp8")
theme_override_font_sizes/font_size = 64
text = "E"
horizontal_alignment = 1

[node name="TimeRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 512.0
offset_right = 889.0
offset_bottom = 112.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("19_hsxy6")
script = ExtResource("20_mb7b5")

[node name="Time" type="Label" parent="CanvasLayer/TimeRect"]
layout_mode = 0
offset_left = 115.0
offset_top = 25.0
offset_right = 259.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("15_p1fp8")
theme_override_font_sizes/font_size = 64
text = "00:00"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="CanvasLayer/TimeRect"]
autostart = true

[node name="Blur" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_jjmp3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause" parent="CanvasLayer" node_paths=PackedStringArray("blurAnimator") instance=ExtResource("28_qsid5")]
blurAnimator = NodePath("../../Blur")

[node name="LvlUpPanel" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
process_mode = 2
offset_left = 1555.0
offset_top = -39.0
offset_right = 2287.0
offset_bottom = 1253.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("16_pt8bw")
script = ExtResource("17_7wdh4")

[node name="UpgradeStack" type="VBoxContainer" parent="CanvasLayer/LvlUpPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 127.5
offset_top = 257.5
offset_right = 527.5
offset_bottom = 357.5

[node name="Label" type="Label" parent="CanvasLayer/LvlUpPanel"]
layout_mode = 0
offset_left = 285.0
offset_top = 172.5
offset_right = 521.0
offset_bottom = 231.5
theme_override_fonts/font = ExtResource("15_p1fp8")
theme_override_font_sizes/font_size = 64
text = "Upgrade!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Death" type="Control" parent="CanvasLayer"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_left = -584.0
offset_top = -258.0
offset_right = -544.0
offset_bottom = -218.0
scale = Vector2(2, 2)
script = ExtResource("24_pimhb")

[node name="Replay" type="TextureRect" parent="CanvasLayer/Death"]
layout_mode = 0
offset_left = 464.0
offset_top = 183.0
offset_right = 992.0
offset_bottom = 393.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("25_x16dd")

[node name="Label" type="Label" parent="CanvasLayer/Death/Replay"]
layout_mode = 0
offset_left = 170.0
offset_top = 62.0
offset_right = 354.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("15_p1fp8")
theme_override_font_sizes/font_size = 64
text = "Rigioca"

[node name="Esci" type="TextureRect" parent="CanvasLayer/Death"]
layout_mode = 0
offset_left = 464.0
offset_top = 280.0
offset_right = 992.0
offset_bottom = 490.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("25_x16dd")

[node name="Label" type="Label" parent="CanvasLayer/Death/Esci"]
layout_mode = 0
offset_left = 190.0
offset_top = 62.0
offset_right = 374.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("15_p1fp8")
theme_override_font_sizes/font_size = 64
text = "Esci
"

[node name="Pressed" type="AudioStreamPlayer2D" parent="CanvasLayer/Death"]
process_mode = 3
stream = ExtResource("26_c1ka6")

[node name="Selected" type="AudioStreamPlayer2D" parent="CanvasLayer/Death"]
process_mode = 3
stream = ExtResource("27_at76x")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_haqgp")

[node name="CallectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CallectArea"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_786sv")

[node name="RegenTimer" type="Timer" parent="."]
autostart = true

[node name="Blur" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_wmdsu")
}

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("28_ijlcm")
pitch_scale = 0.5

[node name="Explosion" type="Node2D" parent="."]
script = ExtResource("31_op854")

[node name="Thunder" type="GPUParticles2D" parent="Explosion"]
modulate = Color(1, 2, 2, 1)
material = SubResource("CanvasItemMaterial_k6msx")
emitting = false
amount = 50
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_xloa2")
texture = ExtResource("31_vft15")
one_shot = true
explosiveness = 0.5
randomness = 0.4

[node name="hitBox" parent="Explosion" instance=ExtResource("32_gt2e2")]
collision_layer = 4
damage = 100

[node name="CollisionShape2D" parent="Explosion/hitBox" index="0"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_3n5r6")
debug_color = Color(0.825244, 0.00160545, 0.955459, 0.42)

[node name="Timer" type="Timer" parent="Explosion"]
wait_time = 12.0
one_shot = true

[node name="COTU" parent="." node_paths=PackedStringArray("player") instance=ExtResource("40_s655x")]
radius = 100
player = NodePath("..")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="CanvasLayer/Magnet/Timer" to="CanvasLayer/Magnet" method="_on_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/TimeRect/Timer" to="CanvasLayer/TimeRect" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="CanvasLayer/Death/Replay" to="CanvasLayer/Death" method="_on_replay_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Death/Replay" to="CanvasLayer/Death" method="_on_replay_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Death/Esci" to="CanvasLayer/Death" method="_on_esci_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Death/Esci" to="CanvasLayer/Death" method="_on_esci_mouse_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CallectArea" to="." method="_on_callect_area_area_entered"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Explosion/Timer" to="Explosion" method="_on_timer_timeout"]

[editable path="HurtBox"]
[editable path="Explosion/hitBox"]
